# esp-dl

./: .gitignore  CMakeLists.txt  README.md  commands.txt
3PXNet_models/anomaly_detection/: CMakeLists.txt
3PXNet_models/anomaly_detection/3pxnet-model-autogen/binarize/: 111.h  112.h  113.h  114.h  115.h  116.h  117.h  118.h  119.h  120.h  batchnorm10_bias.h  batchnorm10_running_mean.h  batchnorm10_running_var.h  batchnorm10_weight.h  bn1.h  bn2.h  bn3.h  bn4.h  bn5.h  bn6.h  bn7.h  bn8.h  bn9.h  source.h  source.h.old
3PXNet_models/anomaly_detection/3pxnet-model-autogen/binarized/: 110.h  111.h  112.h  113.h  114.h  116.h  117.h  118.h  119.h  bn8.h  source.h
3PXNet_models/anomaly_detection/3pxnet-model-autogen/full/: model.h  model.h.old  source.h
3PXNet_models/anomaly_detection/3pxnet-model-autogen/quantized/: model_qu.h  model_qu.h.old  source.h
3PXNet_models/anomaly_detection/3pxnet-model-autogen/ternarize_high/: 151.h  152.h  153.h  154.h  155.h  156.h  157.h  158.h  159.h  160.h  bn2.h  source.h
3PXNet_models/anomaly_detection/3pxnet-model-autogen/ternarize_low/: 151.h  152.h  153.h  154.h  155.h  157.h  158.h  159.h  160.h  batchnorm10_running_var.h  bn1.h  source.h
3PXNet_models/anomaly_detection/3pxnet-model-autogen/ternarize_medium/: 151.h  152.h  153.h  154.h  155.h  157.h  158.h  159.h  160.h  batchnorm10_bias.h  bn6.h  bn7.h  source.h
3PXNet_models/anomaly_detection/main/: CMakeLists.txt  app_main.c
3PXNet_models/esp_dl_toy/: CMakeLists.txt  toy.dis
3PXNet_models/esp_dl_toy/main/: CMakeLists.txt  app_main.c
3PXNet_models/face_detection/: CMakeLists.txt
3PXNet_models/face_detection/3pxnet-model-autogen/: 3pxnet_util.c  3pxnet_util.c.bkp  3pxnet_util.h  3pxnet_util.h.bkp  file
3PXNet_models/face_detection/main/: CMakeLists.txt  app_facenet.c  facenet_full_prec.c  facenet_full_prec_qu.c  fd_forward.c
3PXNet_models/face_detection_arduino/face_detection_arduino/: face_detection_arduino.ino
3PXNet_models/face_detection_custom/: CMakeLists.txt
3PXNet_models/face_detection_custom/3pxnet-inference-library/: Makefile
3PXNet_models/face_detection_custom/main/: CMakeLists.txt  app_facenet.c  facenet_full_prec.cpp  fd_forward.c
3PXNet_models/face_detection_custom/main/include/: facenet.h  facenet_full_prec.h  facenet_full_prec_qu.h
3PXNet_models/face_detection_custom_test/: CMakeLists.txt
3PXNet_models/face_detection_custom_test/main/: CMakeLists.txt  app_main.cpp  facenet_full_prec.c  facenet_full_prec_qu.c
3PXNet_models/face_detection_custom_test/main/include/: app_facenet.h  printUtils.h
3PXNet_models/face_detection_orig/: CMakeLists.txt  Makefile
3PXNet_models/face_verification/: CMakeLists.txt  partitions.csv  temp.csv
3PXNet_models/face_verification/3pxnet-model-autogen/: conv_act_1.npy  conv_act_4_2.npy  conv_act_5_1.npy  conv_act_5_2.npy  conv_act_pack_1.npy  conv_act_pack_2_1.npy  conv_act_pack_3_1.npy  conv_act_pack_5_2.npy  conv_out_act_4_1.npy  conv_out_act_4_2.npy  conv_out_act_4_d.npy  conv_out_act_5_1.npy  conv_out_act_5_2.npy  conv_out_act_pack_2_1.npy  conv_out_act_pack_2_2.npy  conv_out_act_pack_3_1.npy  conv_out_act_pack_3_2.npy  conv_out_act_pack_4_1.npy  conv_out_act_pack_4_2.npy  conv_out_act_pack_4_d.npy  conv_out_act_pack_5_1.npy  conv_out_act_pack_5_2.npy  conv_sign_pack_2_1.npy  conv_sign_pack_5_1.npy  conv_weight_1.npy  conv_weight_2_1.npy  conv_weight_2_2.npy  conv_weight_3_1.npy  conv_weight_3_2.npy  conv_weight_4_1.npy  conv_weight_4_2.npy  conv_weight_4_d.npy  conv_weight_5_1.npy  conv_weight_5_2.npy  conv_weight_pack_1.npy  conv_weight_pack_2_1.npy  conv_weight_pack_2_2.npy  conv_weight_pack_3_1.npy  conv_weight_pack_3_2.npy  conv_weight_pack_4_1.npy  (+13 more)
3PXNet_models/face_verification/main/: CMakeLists.txt  app_main.c  get_weights_http.h  linker_fragment_file.lf
3PXNet_models/flash_size/: CMakeLists.txt  partitions.csv  script.sh
3PXNet_models/flash_size/main/: CMakeLists.txt  app_main.c  data.h
3PXNet_models/http_request/main/: http_request_example_main.c  http_request_example_main.h
3PXNet_models/image_classification/main/: CMakeLists.txt  app_model.c  model.c  printUtils.c
3PXNet_models/image_classification/main/include/: model.h  printUtils.h
3PXNet_models/image_classification_cnn_medium/include/: model.h
3PXNet_models/image_classification_cnn_medium/main/: CMakeLists.txt  app_main.c
3PXNet_models/image_classification_non_res_resnet/include/: model.h
3PXNet_models/image_classification_non_res_resnet/main/: CMakeLists.txt  app_main.c
3PXNet_models/image_classification_resnet/: CMakeLists.txt  Makefile
3PXNet_models/image_classification_resnet/main/: CMakeLists.txt  app_main.cpp  app_model.c  model.c  model_qu.c  printUtils.c
3PXNet_models/mnist/include/: cnn.h  cnn_qu_8.h
3PXNet_models/mnist_test/: CMakeLists.txt
3PXNet_models/mnist_test/3pxnet-model-autogen/: 33.h  34.h  bn1.h  bn2_bias.h  bn2_running_mean.h  bn2_running_var.h  bn2_weight.h  image.h  source.h
3PXNet_models/mnist_test/include/: cnn_qu.h  model.h
3PXNet_models/mnist_test/main/: CMakeLists.txt  app_main.c
3PXNet_models/parallel/: CMakeLists.txt
3PXNet_models/parallel/main/: app_main.c
3PXNet_models/popcount/: CMakeLists.txt  Makefile  README.md
3PXNet_models/popcount/main/: CMakeLists.txt  app_main.cpp
3PXNet_models/single_exp/: CMakeLists.txt
3PXNet_models/single_exp/main/: CMakeLists.txt  app_main.c
include/dl/: dl_constant.hpp  dl_define.hpp  dl_tool.hpp  dl_variable.hpp
include/dl/advance/: dl_advance_detector.hpp  dl_advance_detector_anchor_box.hpp  dl_advance_detector_anchor_point.hpp
include/dl/layer/: dl_layer_concat2d.hpp  dl_layer_conv2d.hpp  dl_layer_depthwise_conv2d.hpp  dl_layer_global_depthwise_conv2d.hpp
include/dl/nn/: dl_nn_conv2d.hpp  dl_nn_depthwise_conv2d.hpp  dl_nn_global_depthwise_conv2d.hpp
include/model/: cat_face_detector.hpp  human_face_detector.hpp
lib/esp32/: README.md
lib/esp32s3/: README.md
tool/: convert.py
tutorial/: README.md
tutorial/main/: CMakeLists.txt  app_main.cpp
tutorial/model/: mnist_model.hpp
tutorial/model/npy/: config.json
(+839 files in other folders)
